# demo_hub

./: .gitignore  Ability.md  README.md  work_tips.md
demo_Eigen/: CMakeLists.txt  README.md  main.cpp  test_eigen.cpp  test_eigen.h
demo_cmake/: README.md  install_lib.sh
demo_cpp_tips/: CMakeLists.txt  main.cpp  remove.cpp  remove.h  test_other.cpp  test_other.h
demo_gtest/: CMakeLists.txt
demo_gtest/test/: CMakeLists.txt  factorial_test.cpp
demo_mc/: CMakeLists.txt  CMakeLists1.txt
demo_mc/cmake/: GetMC3Th.cmake
demo_mc/src/: CMakeLists.txt  main.cpp
demo_mc/src/collision_checker/: CMakeLists.txt  collision_checker.cpp
demo_mqtt/: CMakeLists.txt  MQTTCommunication.cpp  MQTTCommunication.h  main.cpp  robot_state.cpp  robot_state.h
demo_mqtt/include/: MQTTCommunication.h
demo_mqtt/lib/: libpaho-mqtt3a.so.1  libpaho-mqttpp3.so.1.2.0
demo_python/: 4view.py  RobotMQTTClient.py  auto_sphere_detect.py  constraint_sample.py  data_graph.py  dcm2mha.py  demo_3d_plot.py  dicom_viewer.py  dynamic_graph.py  evaluate_transform_matrix.py  force_sensor.py  four_plane_viewer.py  four_plane_viewer2.py  gear_ratio_calibration.py  handeye_calibration.py  hr_robot_test.py  keyboard_control.py  laser_position.csv  laser_position1.csv  laser_rangefinder.py  mqtt_test.py  multi_thread.py  needle_display.py  orientation_projection.py  protractor.py  respiratory_force_sensor.py  respiratory_test.py  robot_mqtt_client.py  robot_operation_manager.py  serial_communication.py  socket_client_demo.py  socket_server_demo.py  svd_compare.py  test.py  test_pyads.py  test_pycrc.py  test_reliability.py  ur5_vtk.py  vtk_callback_demo.py  vtk_dcm.py  (+2 more)
demo_python/arm_dynamics/: agibot_SymPyBotics.py  dynamic_identification.py  example_SymPyBotics.py  minize_test.py  optimal_trajectory.py  xbot_SymPyBotics.py
demo_python/d2l_practice/: chapter12_5.py  chapter12_6.py  chapter13_1.py  chapter13_10.py  chapter13_11.py  chapter13_12.py  chapter13_13.py  chapter13_14.py  chapter13_2.py  chapter13_3.py  chapter13_4.py  chapter13_5.py  chapter13_6.py  chapter13_7.py  chapter13_9.py  chapter2.py  chapter3_1.py  chapter3_2.py  chapter3_3.py  chapter3_5.py  chapter3_6.py  chapter3_7.py  chapter4_1.py  chapter4_10.py  chapter4_2.py  chapter4_3.py  chapter4_4.py  chapter4_5.py  chapter4_6.py  chapter5_6.py  chapter6_2.py  chapter6_3.py  chapter6_4.py  chapter6_5.py  chapter6_6.py  chapter7_1.py  chapter7_2.py  chapter7_3.py  chapter7_4.py  chapter7_5.py  (+12 more)
demo_python/d2l_practice/model/: input_scaler2.joblib  input_scaler3.joblib  nn_model2.pth  nn_model3.pth  output_scaler2.joblib  output_scaler3.joblib  xgb_model2.joblib  xgb_model3.joblib
demo_python/hands_on_rl/: chapter4.py  chapter5.py  chapter6.py  chapter7.py  main.py  rl.py  rl_utils.py
demo_python/itk_demo/: auto_sphere_detect.py  detect_target_sphere.py  itk_tool_box.py
demo_python/rotation_fit/: predicter.py  robot_mqtt_client.py  rotation_fit.py  rotation_fit.spec  run.txt
demo_python/vtk_demo/: dicom_viewer.py  four_plane_viewer.py  four_plane_viewer1.py  vtk_dcm_slice.py
demo_ros_controllers/: CMakeLists.txt  cartesian_state.cpp  cartesian_state.h  cartesian_trajectory_segment.cpp  cartesian_trajectory_segment.h  demo_cartesian_trajectory_segment.cpp  demo_quintic_spline_segment.cpp  quintic_spline_segment.h
demo_spdlog/: CMakeLists.txt  class_test.h  main.cpp  spdlog_comm.h
demo_spdlog/xenomai/demo/: bufp-label  bufp-readwrite  can_rtt  cyclictest  eth_p_all
demo_spdlog/xenomai/lib/: libalchemy.so.0.0.0  libcobalt.so.2.0.0
demo_spdlog/xenomai/sbin/: analogy_calibrate  rtcfg  rtiwconfig  version
demo_totg/: CMakeLists.txt  Example.cpp  Path.cpp  Path.h  Test.cpp  Trajectory.cpp  Trajectory.h  demo_totg.cpp  plotTrajectory.m
demo_xenomai/: CMakeLists.txt  calc_altency.cpp  calc_time_diff.cpp  periodic_task.cpp  priority_based_cheduling.cpp  xddp.cpp
demo_xenomai/xenomai/demo/: altency  cross-link  gpiopwm  iddp-label  iddp-sendrecv  xddp-echo  xddp-label  xddp-stream
demo_xenomai/xenomai/include/: xeno_config.h
demo_xenomai/xenomai/lib/: libanalogy.so.1.0.0  libmodechk.so.0  libtrank.so.0  libvxworks.so.0
demo_xenomai/xenomai/sbin/: analogy_config  autotune  corectl  hdb  nomaccfg  rtcanconfig  rtifconfig  rtping  rtps  rtroute  slackspot  tdmacfg
demo_yaml/: CMakeLists.txt  config.yaml  config_parameter.yaml  libyaml-cpp.so.0.7.0  main.cpp
