cmake_minimum_required(VERSION 3.0.0)
project(spdlog_demo VERSION 0.1.0)

include(CTest)
enable_testing()

set(CMAKE_CXX_FLAGS "-pthread -std=c++11")
find_package(spdlog REQUIRED)
include_directories(${spdlog_INCLUDE_DIR})
if(${spdlog_FOUND})
    # message(${spdlog_INCLUDE_DIR})
# else()
    message("spdlog library not found!!")
endif()
add_executable(spdlog_demo main.cpp)
target_link_libraries(spdlog_demo)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
