cmake_minimum_required(VERSION 3.0.0)
project(spdlog_demo VERSION 0.1.0)

include(CTest)
enable_testing()

set(CMAKE_CXX_FLAGS "-pthread -std=c++11")
# if(WIN32)
#     include_directories("D:/vcpkg/installed/x64-windows/include")
# elseif(UNIX)
#     include_directories("/usr/local/include")
# endif()
find_package(spdlog CONFIG REQUIRED)
# include_directories(${spdlog_INCLUDE_DIR})
# if(NOT ${spdlog_FOUND})
#     message("spdlog library not found!!")
# endif()
add_executable(spdlog_demo main.cpp)
# target_link_libraries(spdlog_demo D:/vcpkg/installed/x64-windows/lib/spdlog.lib)
target_link_libraries(spdlog_demo PRIVATE spdlog::spdlog)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
