cmake_minimum_required(VERSION 3.7.2)
project(helloWorld)

option(HELLO_WORLD "test mode" ON)

if(${HELLO_WORLD})
    execute_process(COMMAND ${PROJECT_SOURCE_DIR}/xenomai/bin/xeno-config --posix --alchemy --cflags OUTPUT_VARIABLE XENO_NATIVE_CFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
    execute_process(COMMAND ${PROJECT_SOURCE_DIR}/xenomai/bin/xeno-config --auto-init-solib --posix --alchemy --ldflags OUTPUT_VARIABLE XENO_NATIVE_LDFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
    message("hello world")
else()
    execute_process(COMMAND ${PROJECT_SOURCE_DIR}/xenomai/bin/xeno-config --posix --cflags OUTPUT_VARIABLE XENO_NATIVE_CFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
    execute_process(COMMAND ${PROJECT_SOURCE_DIR}/xenomai/bin/xeno-config --auto-init-solib --posix --ldflags OUTPUT_VARIABLE XENO_NATIVE_LDFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
    message("xddp")
endif()
message("-- CFLAGS: " ${XENO_NATIVE_CFLAGS})
message("-- LDFLAGS: " ${XENO_NATIVE_LDFLAGS})

# include_directories(/usr/xenomai/include/alchemy/)
# include_directories(/home/zxliao/Documents/xenomai_ethercat_demo/xenomai/include)
# include_directories(/usr/xenomai/include/rtdm)
# include_directories(/usr/xenomai/posix/)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${XENO_NATIVE_CFLAGS}")
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${XENO_NATIVE_CFLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${XENO_NATIVE_LDFALGS}")
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${XENO_NATIVE_LDFALGS}")

if(${HELLO_WORLD})
    link_directories(${PROJECT_SOURCE_DIR}/xenomai/lib)
    # add_executable(helloworld helloWorld.c)
    # add_executable(priority_based_cheduling priority_based_cheduling.cpp)
    add_executable(periodic_task periodic_task.cpp)
    target_link_libraries(periodic_task ${XENO_NATIVE_LDFLAGS})
else()
    add_executable(xddp xddp.cpp)
    target_link_libraries(xddp ${XENO_NATIVE_LDFLAGS})
    message("xddp")
endif()
